# Ferienakademie_physics_simulating_game

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  DevOpsDocumentation.md  README.md  run_check.sh  setup_ubuntu.sh  xxx.txt
assets/shaders/: grass_instancing.frag  grass_instancing.vert  hill.frag  hill.vert
kinect/OpenNI-Unstable-1.5.4.0/: CHANGES
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/CreateRedist/: RedistMaker  Redist_OpenNi.py
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/CreateRedist/Output/: BuildOpenNI.txt  BuildOpenNI_clean.txt  BuildSmpDebug.txt  BuildSmpRelease.txt
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Include/: XnPlatform.h
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiSimpleViewer/x64-Debug/: NiSimpleViewer.d
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiSimpleViewer/x64-Release/: NiSimpleViewer.d
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiUserSelection/x64-Debug/: SampleManager.d  SceneDrawer.d
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiUserSelection/x64-Release/: SampleManager.d  SceneDrawer.d
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiUserTracker/: SceneDrawer.cpp
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiUserTracker/x64-Debug/: SceneDrawer.d  main.d
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiUserTracker/x64-Release/: SceneDrawer.d  main.d
kinect/OpenNI-Unstable-1.5.4.0/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.4.0/Samples/NiViewer/x64-Debug/: NiViewer.d
kinect/OpenNI-Unstable-1.5.4.0/Platform/Win32/CreateRedist/: RedistMaker.bat  UpdateVersion.py
kinect/OpenNI-Unstable-1.5.4.0/Platform/Win32/Install/OpenNI/: OpenNI.wxs
kinect/OpenNI-Unstable-1.5.4.0/Platform/Win32/Install/OpenNI/Fragments/: BinariesFragment.wxs
kinect/OpenNI-Unstable-1.5.4.0/Platform/Win32/Install/OpenNI/Includes/: OpenNIVariables.wxi
kinect/OpenNI-Unstable-1.5.4.0/Samples/NiRecordRaw/: NiRecordRaw.cpp
kinect/OpenNI-Unstable-1.5.4.0/Samples/NiSkeletonBenchmark/: NiSkeletonBenchmark.cpp
kinect/OpenNI-Unstable-1.5.4.0/Source/DoxyGen/: Doxyfile
kinect/OpenNI-Unstable-1.5.4.0/Source/DoxyGen/Text/: Tutorial.Build.txt  Tutorial.NewApp.txt
kinect/OpenNI-Unstable-1.5.4.0/Source/Modules/Common/: DataRecords.cpp
kinect/OpenNI-Unstable-1.5.4.0/Source/Modules/nimCodecs/: ExportedCodec.cpp
kinect/OpenNI-Unstable-1.5.4.0/Source/Modules/nimMockNodes/: ExportedMockNodes.cpp  ExportedMockNodes.h  MockAudioGenerator.cpp  MockAudioGenerator.h  MockDepthGenerator.cpp  MockDepthGenerator.h  MockGenerator.cpp  MockGenerator.h  MockIRGenerator.cpp  MockIRGenerator.h  MockImageGenerator.cpp  MockImageGenerator.h  MockMapGenerator.cpp  MockMapGenerator.h  MockProductionNode.cpp  MockProductionNode.h
kinect/OpenNI-Unstable-1.5.4.0/Source/Modules/nimRecorder/: PlayerNode.cpp  PlayerNode.h  RecorderNode.cpp  RecorderNode.h
kinect/OpenNI-Unstable-1.5.4.0/Source/OpenNI/: XnDumpFileWriter.cpp  XnNodeWatcher.cpp  XnNodeWatcher.h  XnPlayerImpl.cpp  XnPlayerImpl.h  XnRecorderImpl.cpp  XnRecorderImpl.h
kinect/OpenNI-Unstable-1.5.4.0/Source/OpenNI/Linux/: LinuxUSBDevice.cpp
kinect/OpenNI-Unstable-1.5.4.0/Source/OpenNI/Win32/: Win32Keyboard.cpp  Win32Semaphore.cpp  XnOSWin32Internal.h
kinect/OpenNI-Unstable-1.5.4.0/Testing/OpenNITester/: EventTests.cpp  ListTests.cpp  QueueTests.cpp
kinect/OpenNI-Unstable-1.5.4.0/Wrappers/OpenNI.java/: .classpath
kinect/OpenNI-Unstable-1.5.4.0/Wrappers/OpenNI.jni/: CreateMethods.py  UpdateHeaders.bat  methods.inl
kinect/OpenNI-Unstable-1.5.4.0/Wrappers/OpenNI.net/: AlternativeViewPointCapability.cs  AntiFlickerCapability.cs  AssemblyInfo.cs  AudioGenerator.cs  AudioMetaData.cs  Codec.cs  Context.cs  CroppingCapability.cs  DepthGenerator.cs  DepthMetaData.cs  Device.cs  DeviceIdentificationCapability.cs  EnumerationErrors.cs  FrameSyncCapability.cs  GeneralIntCapability.cs  Generator.cs  HandTouchingFOVEdgeCapability.cs  HandsGenerator.cs  IMapData.cs  IRGenerator.cs  IRMetaData.cs  ImageGenerator.cs  ImageMetaData.cs  Log.cs  MapData.cs  MapGenerator.cs  MapMetaData.cs  MirrorCapability.cs  MockAudioGenerator.cs  MockDepthGenerator.cs  MockIRGenerator.cs  MockImageGenerator.cs  NodeInfo.cs  NodeInfoList.cs  OpenNIImporter.cs  OutputMetaData.cs  Player.cs  PoseDetectionCapability.cs  ProductionNode.cs  Query.cs  (+9 more)
kinect/SensorKinect-0.93-5.1.2.1/Platform/Linux/CreateRedist/Final/: Sensor-Bin-Linux-x64-v5.1.2.1.tar.bz2
libs/NITE/Include/: XnVCircleDetector.h  XnVClickableVirtualPlane.h  XnVFlowRouter.h  XnVGesture.h  XnVMessageGenerator.h  XnVMessageListener.h  XnVMessageMux.h  XnVMultiItemHysteresis1D.h  XnVMultiItemHysteresis2D.h  XnVMultiProcessFlowClient.h  XnVMultiProcessFlowServer.h  XnVMultipleHands.h  XnVNiteVersion.h  XnVPointArea.h  XnVPointControl.h  XnVPointDenoiser.h  XnVPointTracker.h  XnVPushDetector.h  XnVSelectableSlider1D.h  XnVSelectableSlider2D.h  XnVSessionListener.h  XnVSessionManager.h  XnVSlider1D.h  XnVSlider2D.h  XnVSlider3D.h  XnVSteadyDetector.h  XnVSwipeDetector.h  XnVVirtualCoordinates.h  XnVWaveDetector.h
libs/cmake/: ClangFormat.cmake
libs/raygui/: raygui.h
src/: main.cpp  main.cpp_kinect  main.cpp_x
src/components/: input.cpp  input.h  inventory.cpp  inventory.h  kinect_handler.cpp  kinect_handler.h  mountain.cpp  mountain.h  particle_state.h  player.h  render_components.h  vector.cpp  vector.h
src/entities/: mountain.cpp  mountain.h
src/systems/: game_logic.cpp  game_logic.h  input_systems.cpp  input_systems.h  physics.cpp  physics.h  render_systems.cpp  render_systems.h  rockSpawnStuff.cpp  rockSpawnStuff.h
src/utils/: game_constants.h  kinect_variables.h  resource_manager.h
test/: main_test.cpp  mountain_test.cpp
(+1 files in other folders)
